--- a/roles/tomcat_install/tasks/main.yml
+++ b/roles/tomcat_install/tasks/main.yml
@@ -6,7 +6,7 @@
     groupadd tomcat 
     useradd -s /bin/nologin -g tomcat -d /opt/tomcat tomcat
     mkdir -p /opt/tomcat && chmod -R 755 /opt/tomcat && cd /opt/tomcat
-    wget https://mirrors.sonic.net/apache/tomcat/tomcat-8/v8.5.55/bin/apache-tomcat-8.5.55.tar.gz
+    wget --no-check-certificate https://mirrors.sonic.net/apache/tomcat/tomcat-8/v8.5.55/bin/apache-tomcat-8.5.55.tar.gz
     tar -xzf apache-tomcat-8.5.55.tar.gz -C /opt/tomcat --strip-components=1
     cd /opt/tomcat
     chgrp -R tomcat conf
